--- a/views/visit.erb
+++ b/views/visit.erb
@@ -21,9 +21,9 @@
     <div class="mb-3">
       <label class="form-label">Choose your barber</label><br>
       <select class="form-select bbb" name="barber">
-        <option <%= @barber == 'Jessie Pincman' ? 'selected' : '' %>>Jessie Pincman</option>
-        <option <%= @barber == 'Walter White' ? 'selected' : '' %>>Walter White</option>
-        <option <%= @barber == 'Gus Fring' ? 'selected' : '' %>>Gus Fring</option>
+        <% @barbers.each do |item| %>
+          <option <%= @barber == item['name'] ? 'selected' : '' %>><%= item['name'] %></option>
+        <% end %>
       </select>
     </div>
 
